--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -212,6 +212,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Add missing aws.ec2.instance.state.name into fields.yml. {issue}11219[11219] {pull}11221[11221]
 - Fix ec2 metricset to collect metrics from Cloudwatch with the same timestamp. {pull}11142[11142]
 - Fix potential memory leak in stopped docker metricsets {pull}11294[11294]
+- Fix a socket leak in the postgresql module. {issue}11393[11393] {pull}11419[11419]
 
 *Packetbeat*
 
