--- a/libbeat/docs/breaking.asciidoc
+++ b/libbeat/docs/breaking.asciidoc
@@ -12,6 +12,7 @@ changes, but there are breaking changes between major versions (e.g. 5.x to
 See the following topics for a description of breaking changes:
 
 * <<breaking-changes-7.0>>
+* <<breaking-changes-6.7>>
 * <<breaking-changes-6.3>>
 * <<breaking-changes-6.2>>
 * <<breaking-changes-6.1>>
@@ -28,6 +29,14 @@ upgrade the Beats to version 7.0. {see-relnotes}
 ==== Field name changes
 
 include::./field-name-changes.asciidoc[]
+
+[[breaking-changes-6.7]]
+=== Breaking changes in 6.7
+
+The Central management document format used by Kibana has changed. As a result of the template
+changes beats and tags created prior to 6.7 will not work with the new UI until their are moved to
+the new format, we have created a one time [tool]() to help you migrate your data from
+6.6 to 6.7. {see-relnotes}
 
 [[breaking-changes-6.3]]
 === Breaking changes in 6.3
