--- a/libbeat/docs/breaking.asciidoc
+++ b/libbeat/docs/breaking.asciidoc
@@ -30,10 +30,12 @@ upgrade the Beats to version 7.0. {see-relnotes}
 
 //tag::notable-breaking-changes[]
 
-// end::notable-breaking-changes[]
+[float]
 ==== Field name changes
 
 include::./field-name-changes.asciidoc[]
+
+// end::notable-breaking-changes[]
 
 [[breaking-changes-6.3]]
 === Breaking changes in 6.3
