--- a/x-pack/filebeat/module/coredns/_meta/docs.asciidoc
+++ b/x-pack/filebeat/module/coredns/_meta/docs.asciidoc
@@ -21,4 +21,4 @@ with other versions of Kubernetes.
 This module comes with a sample dashboard.
 
 [role="screenshot"]
-image::./images/Coredns_Overview_Dashboard.jpg[]
+image:./images/kibana-coredns.jpg[]
