--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -183,7 +183,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Add support for iis log with different address format. {issue}11255[11255] {pull}11256[11256]
 - Add fix to parse syslog message with priority value 0. {issue}11010[11010]
 - Don't apply multiline rules in Logstash json logs. {pull}11346[11346]
-- Fix coredns image in docs.asciidoc for docs build. {pull}11460[11460]
+- Fix coredns image in docs.asciidoc for docs build. {pull}11460[11460] {pull}11461[11461]
 
 *Heartbeat*
 
