Fix metrics appending in prometheus collector (#11398)
Update method of common.MapStr doesn't update nested maps
so we were overwriting existing metrics.

Fix fields definition to add wildcard so fields match.

Add testdata.

(cherry picked from commit a174425cb45c406a748b290dd2ef892c731cdac7)

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -20040,7 +20040,7 @@ Stats scraped from a Prometheus endpoint.
 
 
 
-*`prometheus.labels`*::
+*`prometheus.labels.*`*::
 +
 --
 type: object
@@ -20050,7 +20050,7 @@ Prometheus metric labels
 
 --
 
-*`prometheus.metrics`*::
+*`prometheus.metrics.*`*::
 +
 --
 type: object
