[Auditbeat] System module: Shorten entity ids (#11405)
As discussed in https://github.com/elastic/beats/issues/11348, this shortens down entity IDs to base64-encoded 12 bytes. It makes quite the difference.

I've also used the opportunity to finally standardize the `TestData` functions to (hopefully) always generate the same data (or at least to get closer to that), regardless of which system they are run on.

Resolves https://github.com/elastic/beats/issues/11348.

(cherry picked from commit 2f51a076d525ebeab81d64dd820c1de1c4ef8cf1)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -21,6 +21,7 @@ https://github.com/elastic/beats/compare/v7.0.0-beta1...master[Check the HEAD di
 *Auditbeat*
 
 - Process dataset: Only report processes with executable. {pull}11232[11232]
+- Shorten entity IDs. {pull}11405[11405]
 
 *Filebeat*
 
