--- a/libbeat/docs/breaking.asciidoc
+++ b/libbeat/docs/breaking.asciidoc
@@ -12,6 +12,7 @@ changes, but there are breaking changes between major versions (e.g. 5.x to
 See the following topics for a description of breaking changes:
 
 * <<breaking-changes-7.0>>
+* <<breaking-changes-6.7>>
 * <<breaking-changes-6.3>>
 * <<breaking-changes-6.2>>
 * <<breaking-changes-6.1>>
@@ -28,6 +29,14 @@ upgrade the Beats to version 7.0. {see-relnotes}
 ==== Field name changes
 
 include::./field-name-changes.asciidoc[]
+
+[[breaking-changes-6.7]]
+=== Breaking changes in 6.7
+
+The data structure used to store Beats central management data in Kibana has changed. As a result of the
+template changes, enrolled Beats and configuration tags created prior to 6.7 will not work until you migrate them to the new format.
+To migrate to the new format, use the https://github.com/elastic/migrate-management-beats/releases[migration tool] we've created.
+For more information, see the https://github.com/elastic/migrate-management-beats/blob/master/README.md[documentation] about the tool. {see-relnotes}
 
 [[breaking-changes-6.3]]
 === Breaking changes in 6.3
@@ -78,7 +87,7 @@ as recommended in the {logstash-ref}/plugins-inputs-beats.html[Beats input
 plugin] documentation. This results in a `host` field in 6.2 indices, and a
 `host.name` field in 6.3 indices. There are no mapping conflicts, but
 any visualizations or searches that use `host` will no longer show results for
-6.3 indices. 
+6.3 indices.
 
 *What do you need to change?*
 
@@ -121,7 +130,7 @@ index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
 For more information, see the documentation for the
 {logstash-ref}/plugins-inputs-beats.html[Beats input plugin].
 
-* Or, in the Beats config file, configure Beats to drop all `host.*` fields: 
+* Or, in the Beats config file, configure Beats to drop all `host.*` fields:
 +
 [source,yaml]
 ----
@@ -140,7 +149,7 @@ With this configuration, Beats drops the `host` fields before sending the
 event to Logstash, and Logstash adds a default `host` field, as it did with
 previous Beats versions. This approach resolves the mapping conflict, but you
 should plan to migrate your Logstash configurations to use `host.name` in
-future releases. 
+future releases.
 
 [[beats-template-non-versioned-indices]]
 ===== Use case: You use the Beats index template and your indices are not versioned
@@ -151,7 +160,7 @@ pattern to create versioned indices.
 
 You cannot resolve the problem by dropping the `host.*` fields, because Logstash
 will add a default `host` field, resulting in a mapping conflict with the
-`host` field defined as an object in the index template. 
+`host` field defined as an object in the index template.
 
 *What do you need to change?*
 
